Writing through news summaries

--- a/2025/2025-08-17-wir.md
+++ b/2025/2025-08-17-wir.md
@@ -59,19 +59,17 @@ We’re on our own in this regard. Act accordingly.
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- New open-source AGI framework from Sentient. https://cointelegraph.com/news/sentient-ai-search-outperforms-gpt4o-perplexity
+- New open-source AGI framework from Sentient. https://cointelegraph.com/news/sentient-ai-search-outperforms-gpt4o-perplexity ([]())
 
-- **Crypto markets ran hot and cold.** New ETH records (and BTC?) early in the weak. But then renewed worries about wholesale-level U.S. inflation squelched the buying on Friday. <!-- Some headlines about this mid-week. Keep an eye out through Friday's close for any necessary market updates in the Sunday email blast. --> https://www.theblock.co/post/366699/spot-ethereum-etfs-524-million-inflows | https://www.theblock.co/post/366689/ethereum-foundation-offloads-13-million-worth-eth
+- **Crypto markets ran hot and cold.** New ETH records (and BTC?) early in the weak. But then renewed worries about wholesale-level U.S. inflation squelched the buying on Friday. <!-- Some headlines about this mid-week. Keep an eye out through Friday's close for any necessary market updates in the Sunday email blast. --> https://www.theblock.co/post/366699/spot-ethereum-etfs-524-million-inflows | https://www.theblock.co/post/366689/ethereum-foundation-offloads-13-million-worth-eth ([]())
 
-- Fed relaxes crypto oversight: https://decrypt.co/335488/fed-ends-supervisory-program-bank-crypto-bitcoin | The American Bankers Association and over 50 state banking groups are urging Congress to close loopholes in the recently enacted GENIUS Act, warning that the lack of clear regulations could trigger a massive deposit flight from traditional banking to stablecoin issuers. This shift could disrupt the flow of credit to businesses and households, increasing lending costs and reducing loans, according to the coalition. ([Decrypt](https://decrypt.co/334930/bank-groups-urge-us-senate-to-close-gaps-in-countrys-new-stablecoin-law)) <!-- Draft summary by Leo/Llama 3.1 8B --> |
+- Fed relaxes crypto oversight: https://decrypt.co/335488/fed-ends-supervisory-program-bank-crypto-bitcoin | The American Bankers Association and over 50 state banking groups are urging Congress to close loopholes in the recently enacted GENIUS Act, warning that the lack of clear regulations could trigger a massive deposit flight from traditional banking to stablecoin issuers. This shift could disrupt the flow of credit to businesses and households, increasing lending costs and reducing loans, according to the coalition. ([Decrypt](https://decrypt.co/334930/bank-groups-urge-us-senate-to-close-gaps-in-countrys-new-stablecoin-law)) <!-- Draft summary by Leo/Llama 3.1 8B --> | ([]())
 
+- The Norway sovereign wealth fund's indirect bitcoin exposure has grown significantly, reaching 7,161 BTC ($862.8 million) as of June 30, primarily due to its investments in companies like Strategy, Block, Coinbase, MARA, and Metaplanet. This exposure represents a 87.7% increase in the past six months and 192.7% over the past year, highlighting the growing mainstream acceptance of bitcoin in diversified portfolios. https://www.theblock.co/post/366752/norway-sovereign-wealth-fund-bitcoin-exposure ([]())
 
+- The crypto exchange and CoinDesk parent Bullish went public. https://www.cnbc.com/2025/08/13/crypto-exchange-bullish-prices-ipo-at-37-per-share-ahead-of-nyse-debut.html | https://www.theblock.co/post/366723/crypto-exchange-bullish-lands-upsized-1-1-billion-ipo-joins-growing-roster-of-public-crypto-firms <!-- Check for updates through the end of the trading weeek. --> ([]())
 
-- The Norway sovereign wealth fund's indirect bitcoin exposure has grown significantly, reaching 7,161 BTC ($862.8 million) as of June 30, primarily due to its investments in companies like Strategy, Block, Coinbase, MARA, and Metaplanet. This exposure represents a 87.7% increase in the past six months and 192.7% over the past year, highlighting the growing mainstream acceptance of bitcoin in diversified portfolios. https://www.theblock.co/post/366752/norway-sovereign-wealth-fund-bitcoin-exposure
-
-- The crypto exchange and CoinDesk parent Bullish went public. https://www.cnbc.com/2025/08/13/crypto-exchange-bullish-prices-ipo-at-37-per-share-ahead-of-nyse-debut.html | https://www.theblock.co/post/366723/crypto-exchange-bullish-lands-upsized-1-1-billion-ipo-joins-growing-roster-of-public-crypto-firms <!-- Check for updates through the end of the trading weeek. -->
-
-- North Korean hackers are regularly applying for jobs at Binance. https://decrypt.co/334943/north-korean-hackers-binance
+- North Korean hackers are regularly applying for jobs at Binance. https://decrypt.co/334943/north-korean-hackers-binance ([]())
 
 ### Market Snapshot
 
@@ -119,7 +117,7 @@ We’re on our own in this regard. Act accordingly.
 
    <tr>
      <td>10-yr U.S.<br> Treasury Yield</td>
-     <td>4.328%</td>
+     <td>4.3280%</td>
      <td>+0.0430</td>
      <td>-0.2450</td>
    </tr>
@@ -130,18 +128,17 @@ We’re on our own in this regard. Act accordingly.
 
 ### Looking Ahead
 
+- OpenAI's GPT-5 is being used to provide health advice to users, despite the risks of people relying on the AI model without consulting a doctor. This raises concerns about accountability, as tech companies may not be liable for the harm caused by their AI models, which can perpetuate errors or biases in their training data.  https://www.technologyreview.com/2025/08/12/1121565/what-you-may-have-missed-about-gpt-5/ ([]())
 
-- OpenAI's GPT-5 is being used to provide health advice to users, despite the risks of people relying on the AI model without consulting a doctor. This raises concerns about accountability, as tech companies may not be liable for the harm caused by their AI models, which can perpetuate errors or biases in their training data.  https://www.technologyreview.com/2025/08/12/1121565/what-you-may-have-missed-about-gpt-5/
+- **AI-generated mistakes in judicial decisions are raising concerns about the reliability and legitimacy of the justice system.** Judges are worried that relying on AI tools could lead to incorrect or misleading decisions, which could have serious consequences in cases like child custody or bail proceedings, and potentially erode public trust in the courts. https://www.technologyreview.com/2025/08/11/1121460/meet-the-early-adopter-judges-using-ai/ ([]())
 
-- **AI-generated mistakes in judicial decisions are raising concerns about the reliability and legitimacy of the justice system.** Judges are worried that relying on AI tools could lead to incorrect or misleading decisions, which could have serious consequences in cases like child custody or bail proceedings, and potentially erode public trust in the courts. https://www.technologyreview.com/2025/08/11/1121460/meet-the-early-adopter-judges-using-ai/
-
-- Grayscale has registered its Cardano and Hedera Trust ETF entities in Delaware, a move that could signal imminent S-1 filings with the Securities and Exchange Commission. This development comes as US investment managers continue to push for the launch of altcoin-based ETFs, following the success of bitcoin and ether-based funds, and as the SEC advances its "Project Crypto" initiative to provide a clearer regulatory framework for the digital asset market. https://www.theblock.co/post/366692/grayscale-cardano-hedera-etf-delaware
+- Grayscale has registered its Cardano and Hedera Trust ETF entities in Delaware, a move that could signal imminent S-1 filings with the Securities and Exchange Commission. This development comes as US investment managers continue to push for the launch of altcoin-based ETFs, following the success of bitcoin and ether-based funds, and as the SEC advances its "Project Crypto" initiative to provide a clearer regulatory framework for the digital asset market. ([The Block](https://www.theblock.co/post/366692/grayscale-cardano-hedera-etf-delaware))
 
 ### Odds & Ends
 
-- A new anti-poaching measure: Make rhino horns radioactive. https://www.npr.org/2025/08/01/nx-s1-5488737/scientists-south-africa-rhino-horns-radioactive-poaching
+- **Scientists in South Africa** have begun injecting rhinos' horns with mildly radioactive isotopes to deter poaching. The injections are safe for the animals but are easily detectable at airports and borders to spot and arrest traffickers. ([National Public Radio](https://www.npr.org/2025/08/01/nx-s1-5488737/scientists-south-africa-rhino-horns-radioactive-poaching))
 
-- Meteor that hit a GA home is older than Earth. https://www.cbsnews.com/news/meteorite-georgia-nasa-earth/
+- **A University of Georgia geologist** has determined that a meteorite that crashed through the roof of a home outside Atlanta in June is 20 million years older than earth. ([CBS News](https://www.cbsnews.com/news/meteorite-georgia-nasa-earth/))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
