Writing through news summaris

--- a/2025/2025-08-17-wir.md
+++ b/2025/2025-08-17-wir.md
@@ -128,15 +128,15 @@ We’re on our own in this regard. Act accordingly.
 
 ### Looking Ahead
 
-- OpenAI's GPT-5 is being used to provide health advice to users, despite the risks of people relying on the AI model without consulting a doctor. This raises concerns about accountability, as tech companies may not be liable for the harm caused by their AI models, which can perpetuate errors or biases in their training data.  https://www.technologyreview.com/2025/08/12/1121565/what-you-may-have-missed-about-gpt-5/ ([]())
+- OpenAI's GPT-5 is being used to provide health advice to users, despite the risks of people relying on the AI model without consulting a doctor. This raises concerns about accountability, as tech companies may not be liable for the harm caused by their AI models, which can perpetuate errors or biases in their training data.   ([MIT Technology Review](https://www.technologyreview.com/2025/08/12/1121565/what-you-may-have-missed-about-gpt-5/))
 
-- **AI-generated mistakes in judicial decisions are raising concerns about the reliability and legitimacy of the justice system.** Judges are worried that relying on AI tools could lead to incorrect or misleading decisions, which could have serious consequences in cases like child custody or bail proceedings, and potentially erode public trust in the courts. https://www.technologyreview.com/2025/08/11/1121460/meet-the-early-adopter-judges-using-ai/ ([]())
+- **AI-generated mistakes in judicial decisions are raising concerns about the reliability and legitimacy of the justice system.** Judges are worried that relying on AI tools could lead to incorrect or misleading decisions, which could have serious consequences in cases like child custody or bail proceedings, and potentially erode public trust in the courts. ([MIT Technology Review](https://www.technologyreview.com/2025/08/11/1121460/meet-the-early-adopter-judges-using-ai/))
 
-- Grayscale has registered its Cardano and Hedera Trust ETF entities in Delaware, a move that could signal imminent S-1 filings with the Securities and Exchange Commission. This development comes as US investment managers continue to push for the launch of altcoin-based ETFs, following the success of bitcoin and ether-based funds, and as the SEC advances its "Project Crypto" initiative to provide a clearer regulatory framework for the digital asset market. ([The Block](https://www.theblock.co/post/366692/grayscale-cardano-hedera-etf-delaware))
+- **Crypto asset-management firm Grayscale has registered** new entities with Delaware regulators to offer exchange-traded funds (ETFs) for the Cardano and Hedera tokens. Such state-level filings are likely a precursor to registering more detailed proposals for such ETFs with the U.S. Securities and Exchange Commission. ([The Block](https://www.theblock.co/post/366692/grayscale-cardano-hedera-etf-delaware))
 
 ### Odds & Ends
 
-- **Scientists in South Africa** have begun injecting rhinos' horns with mildly radioactive isotopes to deter poaching. The injections are safe for the animals but are easily detectable at airports and borders to spot and arrest traffickers. ([National Public Radio](https://www.npr.org/2025/08/01/nx-s1-5488737/scientists-south-africa-rhino-horns-radioactive-poaching))
+- **Scientists in South Africa** have begun injecting rhinos' horns with mildly radioactive isotopes to deter poaching. The injections are safe for the animals but are easily detectable at airports and borders, thus helpful for arresting traffickers. ([National Public Radio](https://www.npr.org/2025/08/01/nx-s1-5488737/scientists-south-africa-rhino-horns-radioactive-poaching))
 
 - **A University of Georgia geologist** has determined that a meteorite that crashed through the roof of a home outside Atlanta in June is 20 million years older than earth. ([CBS News](https://www.cbsnews.com/news/meteorite-georgia-nasa-earth/))
 
