--- a/2025/2025-08-17-wir.md
+++ b/2025/2025-08-17-wir.md
@@ -63,13 +63,13 @@ We’re on our own in this regard. Act accordingly.
 
 - **Crypto markets ran hot and cold.** New ETH records (and BTC?) early in the weak. But then renewed worries about wholesale-level U.S. inflation squelched the buying on Friday. <!-- Some headlines about this mid-week. Keep an eye out through Friday's close for any necessary market updates in the Sunday email blast. --> https://www.theblock.co/post/366699/spot-ethereum-etfs-524-million-inflows | https://www.theblock.co/post/366689/ethereum-foundation-offloads-13-million-worth-eth ([]())
 
-- Fed relaxes crypto oversight: https://decrypt.co/335488/fed-ends-supervisory-program-bank-crypto-bitcoin | The American Bankers Association and over 50 state banking groups are urging Congress to close loopholes in the recently enacted GENIUS Act, warning that the lack of clear regulations could trigger a massive deposit flight from traditional banking to stablecoin issuers. This shift could disrupt the flow of credit to businesses and households, increasing lending costs and reducing loans, according to the coalition. ([Decrypt](https://decrypt.co/334930/bank-groups-urge-us-senate-to-close-gaps-in-countrys-new-stablecoin-law)) <!-- Draft summary by Leo/Llama 3.1 8B --> | ([]())
+- **The trading platform Bullish,** which is also the parent of news site CoinDesk, raised $1.1 billion in an initial public offering at the New York Stock Exchange. Such crypto-related deals have been back in vogue on Wall Street this year. An earlier highlight: the stock-market debut of USDC issuer Circle in June. ([CNBC](https://www.cnbc.com/2025/08/13/crypto-exchange-bullish-prices-ipo-at-37-per-share-ahead-of-nyse-debut.html))
 
-- The Norway sovereign wealth fund's indirect bitcoin exposure has grown significantly, reaching 7,161 BTC ($862.8 million) as of June 30, primarily due to its investments in companies like Strategy, Block, Coinbase, MARA, and Metaplanet. This exposure represents a 87.7% increase in the past six months and 192.7% over the past year, highlighting the growing mainstream acceptance of bitcoin in diversified portfolios. https://www.theblock.co/post/366752/norway-sovereign-wealth-fund-bitcoin-exposure ([]())
+- **U.S. crypto regulation remains in flux.** The Federal Reserve said it will [end a program](https://www.reuters.com/sustainability/boards-policy-regulation/fed-scrap-program-devoted-policing-banks-crypto-fintech-activities-2025-08-15/) that oversaw American banks' crypto activities. Instead, the group's work will be folded into regular bank oversight... Separately, the American Bankers Association and over 50 state banking groups are [urging Congress](https://decrypt.co/334930/bank-groups-urge-us-senate-to-close-gaps-in-countrys-new-stablecoin-law) to close loopholes in the recently enacted Genius Act to prevent a massive flight from traditional cash deposits to stablecoins.
 
-- The crypto exchange and CoinDesk parent Bullish went public. https://www.cnbc.com/2025/08/13/crypto-exchange-bullish-prices-ipo-at-37-per-share-ahead-of-nyse-debut.html | https://www.theblock.co/post/366723/crypto-exchange-bullish-lands-upsized-1-1-billion-ipo-joins-growing-roster-of-public-crypto-firms <!-- Check for updates through the end of the trading weeek. --> ([]())
+- **Indirect exposure to bitcoin** in Norway's sovereign wealth fund has nearly tripled over the past 12 months, reaching $863 million as of June 30, according to public disclosures. Norway's central bank controls the country's sovereign fund, which is the largest such entity in the world. Its crypto exposure is driven by investments in companies like Strategy, Block, Coinbase, MARA, and Metaplanet. ([The Block](https://www.theblock.co/post/366752/norway-sovereign-wealth-fund-bitcoin-exposure))
 
-- North Korean hackers are regularly applying for jobs at Binance. https://decrypt.co/334943/north-korean-hackers-binance ([]())
+- **North Korean hackers** are regularly applying for jobs at Binance, and the exchange has developed a series of checks to weed them out. Yikes. ([Binance](https://decrypt.co/334943/north-korean-hackers-binance))
 
 ### Market Snapshot
 
@@ -100,7 +100,7 @@ We’re on our own in this regard. Act accordingly.
      <td>+0.4%</td>
      <td>+12.8%</td>
    </tr>
-   
+
    <tr>
      <td>Gold</td>
      <td>$3,382.60/oz</td>
@@ -128,9 +128,7 @@ We’re on our own in this regard. Act accordingly.
 
 ### Looking Ahead
 
-- OpenAI's GPT-5 is being used to provide health advice to users, despite the risks of people relying on the AI model without consulting a doctor. This raises concerns about accountability, as tech companies may not be liable for the harm caused by their AI models, which can perpetuate errors or biases in their training data.   ([MIT Technology Review](https://www.technologyreview.com/2025/08/12/1121565/what-you-may-have-missed-about-gpt-5/))
-
-- **AI-generated mistakes in judicial decisions are raising concerns about the reliability and legitimacy of the justice system.** Judges are worried that relying on AI tools could lead to incorrect or misleading decisions, which could have serious consequences in cases like child custody or bail proceedings, and potentially erode public trust in the courts. ([MIT Technology Review](https://www.technologyreview.com/2025/08/11/1121460/meet-the-early-adopter-judges-using-ai/))
+- **James O'Donnell** of the MIT Technology Review has recently covered some harrowing, AI-driven misadventures in [law](https://www.technologyreview.com/2025/08/11/1121460/meet-the-early-adopter-judges-using-ai/) and [medicine](https://www.technologyreview.com/2025/08/12/1121565/what-you-may-have-missed-about-gpt-5/). The full details O'Donnell has unearthed are definitely worth a look. But the TL;DR version boils down to two general rules about AI that are still worth remembering: 1) AI bots' output still needs a *lot* of checking for factual accuracy. Grandiose claims by OpenAI's Sam Altman or other quasi-celebrity tech CEOs aside, the current state of the AI apps that actually exist includes serious limitations. These things aren't yet truly sentient or akin to your favorite clever android from a sci-fi movie. 2) Domain expertise by actual humans is still extremely useful in doing the checking. Full stop.
 
 - **Crypto asset-management firm Grayscale has registered** new entities with Delaware regulators to offer exchange-traded funds (ETFs) for the Cardano and Hedera tokens. Such state-level filings are likely a precursor to registering more detailed proposals for such ETFs with the U.S. Securities and Exchange Commission. ([The Block](https://www.theblock.co/post/366692/grayscale-cardano-hedera-etf-delaware))
 
