Writing through all sections

--- a/2024/2024-07-14.md
+++ b/2024/2024-07-14.md
@@ -1,5 +1,5 @@
 # Cut the algos from your news diet.
-## It’s one of the best things we could all do to have better small-d democratic discourse. Here’s how I do it.
+## It’s one of the best things we could all do to improve mental health and have better small-d democratic discourse.
 
 ![Journalists taking notes](https://mcusercontent.com/cb5b2262972b0cb6543967aa9/images/c705b8d0-ebc9-c42f-3372-c83b19f1e90f.jpg)
 *Photo by the Climate Reality Project via Unsplash*
@@ -8,7 +8,19 @@ _By_ [_Peter A. McKay_](https://pmckay.com)
 
 **When I consume news online these days,** I try to do so in channels with little or no algorithmic curation whenever possible.
 
-The main things I look for instead are feeds organized in [reverse chronological](https://en.wikipedia.org/wiki/Reverse_chronology#:~:text=Reverse%20chronology%20is%20a%20narrative,the%20conclusion%20to%20the%20plot.) order and news sources edited and curated by (gasp!) actual humans. Tools that fit into these categories for me include:
+That means social simply isn’t a primary news source for me anymore, because it’s clearly pretty crappy at that particular job. This is true precisely *because* social platforms usually lean too heavily on algos that tend to make us [angrier and more extreme](https://www.psychologytoday.com/us/blog/friction/201807/why-social-media-makes-us-angrier-and-more-extreme), but not necessarily better informed.
+
+Hence I'm generally spending less time on social these days.  and reserving it for personal updates, rants [about the Mets](https://bsky.app/profile/peteramckay.bsky.social/post/3lw3662d5622t), and other [ephemera](https://bsky.app/profile/peteramckay.bsky.social/post/3lifciz2bok2y).
+
+For news, the main things I look for instead are feeds organized in [reverse chronological](https://en.wikipedia.org/wiki/Reverse_chronology#:~:text=Reverse%20chronology%20is%20a%20narrative,the%20conclusion%20to%20the%20plot.) order and news sources edited and curated by (gasp!) actual humans.
+
+
+
+
+
+https://github.com/peteramckay/w3wnewsletter/blob/master/2024/2024-07-14.md
+
+ Tools that fit into these categories for me include:
 - **Email newsletters.** Our inboxes are perhaps the original example of reverse chronology, with everything organized simply by timestamp. Then, within each newsletter (like this one), you’re usually getting one actual person’s curated view of the world. If you get several different perspectives in this way, even better. Bingo.
 - **RSS.** Yes, this [old standby](https://rss.com/blog/how-do-rss-feeds-work/) from the early days of the blogosphere still works. My daily feed reader is [Feedly](https://feedly.com/), but there are several others out there you might choose. When you build your own subscription list in one of these things, that itself is a form of human curation.
 - **Podcasts, downloaded via my desktop podcatcher.** The qualifier in that description is really important, as the podcatcher is what cuts out the algos for me, leaving a simple reverse chronology. As a user of the [Ubuntu](https://ubuntu.com/desktop) operating system on my desktop PC, I use the default audio app [Rhythmbox](https://en.wikipedia.org/wiki/Rhythmbox) for curating my podcasts. (I can also move the downloaded audio files over to my mobile devices if necessary with Rhythmbox.) What you probably don’t want to use, however, is something more platform-y like Spotify or Stitcher. Those are more aggressively (and algorithmically) curated, in my experience.
@@ -17,7 +29,7 @@ The main things I look for instead are feeds organized in [reverse chronological
 
 So what do I cut out of my daily setup in order to make room for the above? Well, as you can probably guess, I’m generally spending less time on social media these days, and I specifically try not to use it as a news source. When I’m on social, I’m much more apt to post personal updates or maybe reply to a person I know offline who’s posted something that caught my eye.
 
-But social simply isn’t a primary news source for me anymore, because it’s clearly pretty crappy at that particular job. This is true precisely *because* social platforms usually lean too heavily on algos that tend to make us [angrier and more extreme](https://www.psychologytoday.com/us/blog/friction/201807/why-social-media-makes-us-angrier-and-more-extreme), but not necessarily better informed.
+But
 
 It's more profitable for them that way.
 
