--- a/2025/2025-08-17-wir.md
+++ b/2025/2025-08-17-wir.md
@@ -1,4 +1,4 @@
-# Cut the algos from your news diet.
+# Reminder: Cut the algos from your news diet.
 ## It’s one of the best things we could all do to have better small-d democratic discourse. Here’s how I do it.
 
 ![Stack of newspapers with a smartphone and a pen on top](https://w3w.news/img/megan-lee-3840.jpg)
@@ -18,20 +18,23 @@
 
 <hr>
 
-<!-- Riff on/revive archival post about news algos. Github link: https://github.com/peteramckay/w3wnewsletter/blob/master/2024/2024-07-14.md
+**I've written previously** about my quest to ditch algorithmic curation of the news I consume. But as it's such an important topic — and becoming more so everyday due to low-quality ["AI slop"](https://www.axios.com/2025/08/03/ai-slop-viral-videos-content-scrolling) proliferating around the web — I want to re-share and update some of [my earlier tips](https://github.com/peteramckay/w3wnewsletter/blob/master/2024/2024-07-14.md) for improving news consumption.
 
-This one needs reinforcement from time to time...
+Most important, social simply isn’t a primary news source for me anymore, because it’s clearly pretty crappy at that particular job. This is true precisely *because* social platforms usually lean too heavily on algos that tend to make us [angrier and more extreme](https://www.psychologytoday.com/us/blog/friction/201807/why-social-media-makes-us-angrier-and-more-extreme), but not necessarily better informed.
 
--->
+Hence I'm generally spending less time on social these days, and I try to reserve it for personal updates, the occasional DM, rants [about the Mets](https://bsky.app/profile/peteramckay.bsky.social/post/3lw3662d5622t), or other [ephemera](https://bsky.app/profile/peteramckay.bsky.social/post/3lifciz2bok2y).
 
-**When I consume news online these days,** I try to do so in channels with little or no algorithmic curation whenever possible.
+For news, the main alternatives I seek out are feeds organized in simple [reverse chronological](https://en.wikipedia.org/wiki/Reverse_chronology#:~:text=Reverse%20chronology%20is%20a%20narrative,the%20conclusion%20to%20the%20plot.) order, often with editing and curation by (gasp!) actual humans.
 
-The main things I look for instead are feeds organized in [reverse chronological](https://en.wikipedia.org/wiki/Reverse_chronology#:~:text=Reverse%20chronology%20is%20a%20narrative,the%20conclusion%20to%20the%20plot.) order and news sources edited and curated by (gasp!) actual humans. Tools that fit into these categories for me include:
+Tools that fit into these categories for me include:
+
 - **Email newsletters.** Our inboxes are perhaps the original example of reverse chronology, with everything organized simply by timestamp. Then, within each newsletter (like this one), you’re usually getting one actual person’s curated view of the world. If you get several different perspectives in this way, even better. Bingo.
 - **RSS.** Yes, this [old standby](https://rss.com/blog/how-do-rss-feeds-work/) from the early days of the blogosphere still works. My daily feed reader is [Feedly](https://feedly.com/), but there are several others out there you might choose. When you build your own subscription list in one of these things, that itself is a form of human curation.
-- **Podcasts, downloaded via my desktop podcatcher.** The qualifier in that description is really important, as the podcatcher is what cuts out the algos for me, leaving a simple reverse chronology. As a user of the [Ubuntu](https://ubuntu.com/desktop) operating system on my desktop PC, I use the default audio app [Rhythmbox](https://en.wikipedia.org/wiki/Rhythmbox) for curating my podcasts. (I can also move the downloaded audio files over to my mobile devices if necessary with Rhythmbox.) What you probably don’t want to use, however, is something more platform-y like Spotify or Stitcher. Those are more aggressively (and algorithmically) curated, in my experience.
-- **News organizations’ bespoke sites and apps.** Again, a somewhat old-school option here. But the plus side is that these things usually don’t have much algorithmic curation, except perhaps  for the occasional “most read stories” list or something that’s similarly pretty simple. Where the news orgs have generally been more experimental is in story presentation, design, and multimedia experience. But even with those features, you’re still getting the creative vision of human reporters and editors, not robots trying to target you with ads.
+- **Podcasts, downloaded via my desktop podcatcher.** The qualifier in that description is really important, as the podcatcher is what cuts out the algos for me, leaving a simple reverse chronology. As a user of the [Ubuntu](https://ubuntu.com/desktop) operating system on my desktop PC, I use the default audio app [Rhythmbox](https://en.wikipedia.org/wiki/Rhythmbox) for curating my podcasts. (I can also move the downloaded audio files over to my mobile devices if necessary with Rhythmbox.) What you probably *don’t* want to use, however, is something more platform-y like Spotify or Stitcher. Those are more aggressively (and algorithmically) curated, in my experience.
+- **News organizations’ bespoke sites and apps.** Again, a somewhat old-school option here. But the plus side is that these things usually don’t have much algorithmic curation, except perhaps  for the occasional “most read stories” list or something that’s similarly pretty simple. Where the news orgs have generally been more experimental is in story presentation, design, and multimedia experience. But even with those features, you’re still getting the creative vision of human reporters, editors, and designers, not robots trying to target you with ads.
 - **The Brave web browser.** I will give this one an honorable mention on the list because I find its [default privacy safeguards](https://brave.com/) protect me well against algorithmically targeted advertising in particular. That’s not exactly pertinent to the matter of prioritizing feeds of news headlines. But it is broadly related to the theme of breaking from the major platforms’ surveillance-driven business models.
+
+<!--
 
 So what do I cut out of my daily setup in order to make room for the above? Well, as you can probably guess, I’m generally spending less time on social media these days, and I specifically try not to use it as a news source. When I’m on social, I’m much more apt to post personal updates or maybe reply to a person I know offline who’s posted something that caught my eye.
 
@@ -39,37 +42,49 @@ But social simply isn’t a primary news source for me anymore, because it’s c
 
 It's more profitable for them that way.
 
+-->
+
+Finally, if you want to delve deeper into the underlying threats that bad algos pose to society, I highly recommend the book [Weapons of Math Destruction](https://www.penguinrandomhouse.com/books/241363/weapons-of-math-destruction-by-cathy-oneil/), by data scientist Cathy O’Neil. She does a great job of making the topic accessible to the layman, debunking the misguided idea that algos are inherently free of the ideologies of their creators, and so much more.
+
+Cathy also blogs about these sorts of issues [here](https://mathbabe.org/). And she has an [RSS feed](https://mathbabe.org/feed/)! (See what I did there?)
+
+<!--
 That said, I will admit my alternative solution is also imperfect in some ways. True math geeks might argue, for example, that reverse chronology is itself a sort of algorithm, albeit a much simpler one than the social platforms’ inscrutable black boxes for prioritizing our feeds.
 
 There’s also no single set of rules anyone could come up with that could possibly cover every single social platform out there, with all the different features and interfaces you might choose within each app, and so on. The possibilities are just too vast to cover so easily.
 
-Nevertheless, I find the approach I described above works pretty well for me, in general. And I’m motivated to share it because, frankly, the [awful political news in the U.S.](https://www.wsj.com/politics/elections/trump-taken-off-stage-after-apparent-shots-fired-at-rally-9d6680da?st=67c2iu2yhajek5q&reflink=desktopwebshare_permalink) this weekend is front of mind for me right now. Helping people become better news consumers is a constructive change we should talk about in its wake, I believe.
+Nevertheless, I find the approach I described above works pretty well for me, in general.
+
+<!--
+And I’m motivated to share it because, frankly, the [awful political news in the U.S.](https://www.wsj.com/politics/elections/trump-taken-off-stage-after-apparent-shots-fired-at-rally-9d6680da?st=67c2iu2yhajek5q&reflink=desktopwebshare_permalink) this weekend is front of mind for me right now. Helping people become better news consumers is a constructive change we should talk about in its wake, I believe.
 
 On our Sunday political shows today, there was [a lot of talk](https://www.youtube.com/watch?v=HkBaKOW-OOo) about the need for politicians to “dial back” their rhetoric. It has undoubtedly grown very heated over the years and perhaps prone to encourage disturbed individuals to conduct attacks like the one against former President Trump on Saturday evening.
 
-I fully agree, our elected officials need to set a better tone. But I would add: Each of us, as news consumers, need to do our part as well to inoculate ourselves against all the rhetorical poison that circulates on the tech platforms, day by day.
+I fully agree, our elected officials need to set a better tone. But I would add:
 
-That way, even if some miscreant circulates hate or incitement online, its broader effect on society is limited. It can become like the proverbial tree that falls in the forest with no one around to hear it.
+-->
 
-Sure, it would be nice if the people running social platforms did the work to protect us from such stuff. But we should have learned from repeated [experience](https://www.npr.org/2021/10/05/1043377310/facebook-whistleblower-frances-haugen-congress) by now, that’s simply not going to happen. Not in the real world that we actually live in.
+**For news consumers,** I believe there's a little discussed but urgent need to need to inoculate ourselves against all the rhetorical poison that circulates online everyday. We can't just leave this informational immune response up to news organizations. And we certainly can't leave it to the people running the tech platforms.
 
-We’re on our own in this regard. Act accordingly.
+We should have learned from repeated experience by now, they're simply [not going to do much](https://www.npr.org/2021/10/05/1043377310/facebook-whistleblower-frances-haugen-congress). Not when there's so much profit to be made from keeping people angry, suspicious, and distracted, regardless of the ill effects on the world around us.
+
+If the rest of us want something different, we're ultimately on our own. Act accordingly.
 
 ### Five Things: Aug. 10-16, 2025
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- New open-source AGI framework from Sentient. https://cointelegraph.com/news/sentient-ai-search-outperforms-gpt4o-perplexity ([]())
+- **The startup Sentient** unveiled a new open-source AI development framework dubbed The GRID as a decentralized alternative to closed AI platforms from the likes of OpenAI. The GRID is designed to help developers build, share, and monetize AI agents. ([CoinDesk](https://tech.yahoo.com/ai/articles/openai-rival-sentient-unveils-open-130000094.html))
 
-- **Crypto markets ran hot and cold.** New ETH records (and BTC?) early in the weak. But then renewed worries about wholesale-level U.S. inflation squelched the buying on Friday. <!-- Some headlines about this mid-week. Keep an eye out through Friday's close for any necessary market updates in the Sunday email blast. --> https://www.theblock.co/post/366699/spot-ethereum-etfs-524-million-inflows | https://www.theblock.co/post/366689/ethereum-foundation-offloads-13-million-worth-eth ([]())
+- **Crypto markets ran hot and cold.** Bitcoin set a [new record](https://www.reuters.com/business/bitcoin-hits-fresh-record-fed-easing-bets-add-tailwinds-2025-08-14/) above $124,000, and ether [flirted with](https://finance.yahoo.com/news/ethereum-surges-to-near-record-as-investors-bet-on-biggest-macro-trade-of-the-next-decade-162035539.html) its all-time high set in 2021. But then token prices and the stock market retreated Friday after new data showed wholesale-level inflation hit a [3-year high](https://www.msn.com/en-us/money/markets/ppi-inflation-shock-core-producer-prices-hit-3-year-high-in-july-in-head-scratching-inflation-surge/ar-AA1KwDKW) in the U.S. in July. Hopes for a cut in the Federal Reserve's key interest-rate target ebbed, and traders unwound bets on riskier assets.
 
 - **The trading platform Bullish,** which is also the parent of news site CoinDesk, raised $1.1 billion in an initial public offering at the New York Stock Exchange. Such crypto-related deals have been back in vogue on Wall Street this year. An earlier highlight: the stock-market debut of USDC issuer Circle in June. ([CNBC](https://www.cnbc.com/2025/08/13/crypto-exchange-bullish-prices-ipo-at-37-per-share-ahead-of-nyse-debut.html))
 
-- **U.S. crypto regulation remains in flux.** The Federal Reserve said it will [end a program](https://www.reuters.com/sustainability/boards-policy-regulation/fed-scrap-program-devoted-policing-banks-crypto-fintech-activities-2025-08-15/) that oversaw American banks' crypto activities. Instead, the group's work will be folded into regular bank oversight... Separately, the American Bankers Association and over 50 state banking groups are [urging Congress](https://decrypt.co/334930/bank-groups-urge-us-senate-to-close-gaps-in-countrys-new-stablecoin-law) to close loopholes in the recently enacted Genius Act to prevent a massive flight from traditional cash deposits to stablecoins.
+- **U.S. crypto regulation remains in flux.** The Federal Reserve said it will [end a program](https://www.reuters.com/sustainability/boards-policy-regulation/fed-scrap-program-devoted-policing-banks-crypto-fintech-activities-2025-08-15/) that oversaw American banks' crypto activities. Instead, the group's work will be folded into regular bank oversight... Separately, the American Bankers Association and dozens of state banking groups are [urging Congress](https://decrypt.co/334930/bank-groups-urge-us-senate-to-close-gaps-in-countrys-new-stablecoin-law) to close loopholes in the recently enacted Genius Act to prevent a massive flight from traditional cash deposits to stablecoins.
 
 - **Indirect exposure to bitcoin** in Norway's sovereign wealth fund has nearly tripled over the past 12 months, reaching $863 million as of June 30, according to public disclosures. Norway's central bank controls the country's sovereign fund, which is the largest such entity in the world. Its crypto exposure is driven by investments in companies like Strategy, Block, Coinbase, MARA, and Metaplanet. ([The Block](https://www.theblock.co/post/366752/norway-sovereign-wealth-fund-bitcoin-exposure))
 
-- **North Korean hackers** are regularly applying for jobs at Binance, and the exchange has developed a series of checks to weed them out. Yikes. ([Binance](https://decrypt.co/334943/north-korean-hackers-binance))
+- **North Korean hackers** are regularly applying for jobs at Binance, and the exchange's security chief says in a new interview that the company has developed a series of checks to weed them out. Yikes. ([Decrypt](https://decrypt.co/334943/north-korean-hackers-binance))
 
 ### Market Snapshot
 
@@ -128,9 +143,9 @@ We’re on our own in this regard. Act accordingly.
 
 ### Looking Ahead
 
-- **James O'Donnell** of the MIT Technology Review has recently covered some harrowing, AI-driven misadventures in [law](https://www.technologyreview.com/2025/08/11/1121460/meet-the-early-adopter-judges-using-ai/) and [medicine](https://www.technologyreview.com/2025/08/12/1121565/what-you-may-have-missed-about-gpt-5/). The full details O'Donnell has unearthed are definitely worth a look. But the TL;DR version boils down to two general rules about AI that are still worth remembering: 1) AI bots' output still needs a *lot* of checking for factual accuracy. Grandiose claims by OpenAI's Sam Altman or other quasi-celebrity tech CEOs aside, the current state of the AI apps that actually exist includes serious limitations. These things aren't yet truly sentient or akin to your favorite clever android from a sci-fi movie. 2) Domain expertise by actual humans is still extremely useful in doing the checking. Full stop.
+- **James O'Donnell** of the MIT Technology Review has recently covered some harrowing, AI-driven misadventures in [law](https://www.technologyreview.com/2025/08/11/1121460/meet-the-early-adopter-judges-using-ai/) and [medicine](https://www.technologyreview.com/2025/08/12/1121565/what-you-may-have-missed-about-gpt-5/). The full details O'Donnell has unearthed are definitely worth a look. But the TL;DR version boils down to two rules of thumb about AI that are still worth remembering: 1) AI bots' answers to user queries still need a *lot* of checking for factual accuracy. Grandiose claims by OpenAI's Sam Altman or other quasi-celebrity tech CEOs aside, the current state of the AI apps that actually exist includes serious limitations. These things aren't yet truly sentient or akin to your favorite clever android from a sci-fi movie. 2) Domain expertise by actual humans is still extremely useful in doing the checking. Full stop.
 
-- **Crypto asset-management firm Grayscale has registered** new entities with Delaware regulators to offer exchange-traded funds (ETFs) for the Cardano and Hedera tokens. Such state-level filings are likely a precursor to registering more detailed proposals for such ETFs with the U.S. Securities and Exchange Commission. ([The Block](https://www.theblock.co/post/366692/grayscale-cardano-hedera-etf-delaware))
+- **Crypto asset-management firm Grayscale has registered** new entities with Delaware regulators to offer exchange-traded funds (ETFs) for the Cardano and Hedera tokens. Such state-level filings are likely a precursor to registering more detailed proposals for the ETFs with the U.S. Securities and Exchange Commission. ([The Block](https://www.theblock.co/post/366692/grayscale-cardano-hedera-etf-delaware))
 
 ### Odds & Ends
 
